# OxideAgent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INTERFACE_EXPANSION_IMPLEMENTATION_PLAN.md  LICENSE  MULTIAGENT_PLAN.md  PIPELINE_ERROR.md  README.md  config.toml  deny.toml
.github/: README.md
.github/workflows/: ci.yml  pull_request_ci.yml  release.yml  rust_ci.yml  rust_ci_comprehensive.yml  test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  mcp.rs  ollama.rs  orchestrator.rs  tools.rs  tui.rs  types.rs
src/agents/: mod.rs
src/core/: container.rs  events.rs  interface.rs  mcp_manager.rs  mocks.rs  mod.rs  multi_agent_manager.rs  orchestrator.rs  session.rs  tool_permissions.rs  tools.rs
src/core/agents/: mod.rs
src/core/llm/: client.rs  mod.rs  ollama.rs
src/core/mcp/: config.rs  connection.rs  http.rs  launcher.rs  manager.rs  mod.rs
src/interfaces/: adapters.rs  capabilities.rs  mod.rs  web.rs
src/interfaces/tui/: message.rs  mod.rs
src/tui/: message.rs  mod.rs
tests/: README.md  cli_tests.rs  direct_tool_test.rs  main.rs  print_tool_payload.rs  test_concurrent_directory_changes.rs  test_tool_request.rs  tools_test.rs  types_test.rs
tests/integration/: mod.rs  test_cli.rs  test_orchestrator.rs
tests/integration/core/: test_mocked_external_deps.rs  test_orchestrator.rs  test_orchestrator_agent_interactions.rs  test_tool_approval_workflow.rs  test_tool_interactions.rs
tests/integration/core/tool_permissions/: mod.rs
tests/integration/mcp/: test_config_integration.rs
tests/unit/: mod.rs  simple_tool_permissions_test.rs  test_config.rs  test_utils.rs
tests/unit/core/: mod.rs  test_agents.rs  test_container.rs  test_events.rs  test_mocks.rs  test_orchestrator.rs  test_session.rs  test_session_tool_permissions.rs  test_tool_permissions.rs  test_tools.rs
tests/unit/core/llm/: mod.rs  test_ollama.rs
tests/unit/mcp/: mod.rs  test_config.rs  test_connection.rs  test_http.rs  test_launcher.rs  test_manager.rs
tests/utils/: mock_objects.rs  mod.rs  test_utils.rs
