[package]
name = "OxideAgent"
version = "0.1.0"
edition = "2024"
authors = ["Juan-luke Klopper"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
cargo-tarpaulin = "0.32.8"
clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.28.1"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tui-input = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0"
