[package]
name = "OxideAgent"
version = "0.0.3"
edition = "2024"
authors = ["Juan-luke Klopper"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"

clap = { version = "4.5.43", features = ["derive"] }
crossterm = "0.28.1"
futures-util = "0.3.31"
nanoid = "0.4.0"
once_cell = "1.20.2"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["io", "compat"] }
toml = "0.8"
tui-input = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "=1.11.0", features = ["v4"] }
lazy_static = "1.5.0"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.8.2"
tempfile = "=3.10.1"
